@@ -1,5 +1,11 @@
 dohpaZ (01/01/02)
 ---------------------
+Modifications:
+ + Applied patch #498339 "Patch to sound alerts and some cleanup" from
+   Druppy (druppy).
+
+dohpaZ (01/01/02)
+---------------------
 Happy New Year
 
 Modifications:
